# CMakeLists

./: README.md
_1_Demo/: CMakeLists.txt  README.md
_1_Demo/src/: demo.cpp
_1_DemoOnly/: CMakeLists.txt  README.md
_1_DemoOnly/src/: Demo.cpp
_2_Lib/: CMakeLists.txt  README.md
_2_Lib/include/: myLib.h
_2_Lib/src/: myLib.cpp
_3_Demo_Lib/: CMakeLists.txt  README.md
_3_Demo_Lib/include/: myLib.h
_3_Demo_Lib/src/demo/: CMakeLists.txt  demo.cpp
_3_Demo_Lib/src/lib/: CMakeLists.txt  myLib.cpp
_4_Multi-Demo_Multi-Lib/: CMakeLists.txt  README.md
_4_Multi-Demo_Multi-Lib/include/: lib1.h  lib2.h
_4_Multi-Demo_Multi-Lib/src/demo/: CMakeLists.txt
_4_Multi-Demo_Multi-Lib/src/demo/demo1/: demo1.cpp
_4_Multi-Demo_Multi-Lib/src/demo/demo2/: demo2.cpp
_4_Multi-Demo_Multi-Lib/src/demo/demo3/: demo3.cpp
_4_Multi-Demo_Multi-Lib/src/lib/: CMakeLists.txt
_4_Multi-Demo_Multi-Lib/src/lib/lib1/: lib1.cpp
_4_Multi-Demo_Multi-Lib/src/lib/lib2/: lib2.cpp
